# medical-bias-experiments

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FINAL_EXPERIMENT_SUMMARY.md  LICENSE.txt  Makefile  README.md  analyze_feature_discovery.py  comprehensive_age_analysis.py  comprehensive_demographic_test.py  comprehensive_demographic_test_20250629_234420.json  concept_vectors.py  debug_age_clamping.py  demographic_concept_vectors.json  diagnose_age_features.py  discovered_demographic_features.json  experiment_analysis_20250629_204640.json  final_bias_experiment.py  final_validation_test.py  group_patients_by_age.py  identify_demographic_features.py  library_structure_README.md  local_analysis_testable  localanalysiswithvis  pyproject.toml  re.yaml  release_conditions.json  release_evidences.json  release_test_patients_mini_version.txt  requirements-dev.txt  requirements.txt  run_clamping_equivalence_check_actual.py  run_concept_vectors.py  run_equivalence_check_simple.py  run_production_bias_analysis.py  simple_feature_finder.py  test_broader_age_groups.py  test_gemma_Scope.py  test_intensity_optimization.py  test_new_clamping.py  (+1 more)
codedebugging/: age_feature_300_cases_output.txt  batch_analysis.py  clamping_pipeline_results.json  debug_prompts.py  demographic_concept_vectors_50_cases.json  fix_sae_reconstruction.py  fixed_demographic_concept_vectors.json  multi_demographic_clamping.py  sex_feature_100_cases_output.txt  simple_feature_finder.py  test_concept_vectors_simple.py  test_gemma_Scope.py
demographic_equivalence/: demographic_equiv_plan_20250629_203304.json  run_demographic_equiv_20250629_203304.sh
equivalence_results/: actual_equivalence_check_20250629_230501.json  actual_equivalence_check_20250629_230921.json  actual_equivalence_check_20250629_231526.json  actual_equivalence_check_20250629_231849.json  actual_equivalence_check_20250629_232119.json  simple_equivalence_check_20250629_225226.json  simple_equivalence_check_20250629_230137.json
equivalence_tests/: equivalence_test_plan_20250629_201242.json  equivalence_test_plan_20250629_202136.json  run_equivalence_tests_20250629_201242.sh  run_equivalence_tests_20250629_202136.sh
experiment_plans/: experiment_commands_20250629_200359.json  run_all_experiments_20250629_200359.sh  run_baseline_20250629_200359.sh  run_both_20250629_200359.sh  (+3 more)
(+86 files in other folders)
